fixes: controls not visible in ie

--- a/public/css/syj.css
+++ b/public/css/syj.css
@@ -85,6 +85,7 @@ body, html {
     padding-top: 8px;
     padding-left: 3em;
     clear: right;
+    position: relative; /* otherwise, under #map in ie */
 }
 
 .login-anchor {
@@ -119,6 +120,7 @@ body, html {
     filter:alpha(opacity=85);
     background-color: white;
     padding: 5px 1px 5px 1px;
+    position: relative; /* otherwise, under #map in ie */
 }
 
 /*
